--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,49 @@
 {
-  "liveServer.settings.ChromeDebuggingAttachment": false,
-  "liveSassCompile.settings.formats": [
+    "files.autoSave": "afterDelay",
+    "editor.tabSize": 2,
+    "editor.minimap.enabled": false,
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
+    "editor.formatOnType": true,
+    "liveServer.settings.donotShowInfoMsg": true,
+    "workbench.colorTheme": "Monokai Classic",
+    "editor.wordWrap": "on",
+    "workbench.tree.enableStickyScroll": true,
+    "git.openRepositoryInParentFolders": "never",
+    "git.confirmSync": false,
+    "editor.stickyScroll.enabled": true,
+    "cSpell.userWords": [
+        "GIESER"
+    ],
+    "[json]": {
+        "editor.defaultFoldingRangeProvider": null
+    },
+    "css.enabledLanguages": [
+        "html"
+    ],
+    "css.styleSheets": [
+        "https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css",
+        "src/**/*.css"
+    ],
+    "liveServer.settings.ChromeDebuggingAttachment": false,
+    "comments.openView": "never",
+    "comments.visible": false,
+    "liveSassCompile.settings.showOutputWindowOn": "None",
+    "liveSassCompile.settings.formats": [
+        
 
-    {
-      "format": "expanded",
-      "extensionName": ".css",
-      "savePath": "/styles",
-      "savePathReplacementPairs": null
-    }
-  ]
+        
+
+        {
+            "format": "expanded",
+            "extensionName": ".css",
+            "savePath": null,
+            "savePathReplacementPairs": null
+        }
+    ],
+    "liveSassCompile.settings.forceBaseDirectory": "",
+    "liveSassCompile.settings.useNewCompiler": true,
+    "liveSassCompile.settings.includeItems": [
+
+    ]
 }
